2013-12-30  tino

	* [r9522] ChangeLog, scripts/cg3-autobin.pl,
	  src/GrammarApplicator_runGrammar.cpp,
	  src/GrammarApplicator_runRules.cpp, src/SingleWindow.cpp,
	  src/version.hpp: Fix --dep-delimit to react at a reading level

2013-12-24  tino

	* [r9516] ChangeLog, scripts/cg3-autobin.pl, src/cg_proc.cpp,
	  src/istream.hpp, src/version.hpp: Dirty fix: don't eat BOMs in
	  the stream if null-flush is in effect.

2013-12-10  tino

	* [r9492] AUTHORS, CMake/DebSourcePPA.cmake, CMake/FindBoost.cmake,
	  CMake/FindICU.cmake, CMakeLists.txt, COPYING, ChangeLog,
	  Doxyfile, INSTALL, LICENSE, NEWS, README, TODO, all2unix.pl,
	  cg3.g, cg3.pc.in, cmake.sh, compile-profile.sh, dist/Portfile,
	  dist/dist-osx.pl, dist/osx/vislcg3, emacs/cg.el, get-boost.sh,
	  include/cycle.h, include/exec-stream/exec-stream.cpp,
	  include/exec-stream/exec-stream.h,
	  include/exec-stream/posix/exec-stream-helpers.cpp,
	  include/exec-stream/posix/exec-stream-helpers.h,
	  include/exec-stream/posix/exec-stream-impl.cpp,
	  include/exec-stream/win/exec-stream-helpers.cpp,
	  include/exec-stream/win/exec-stream-helpers.h,
	  include/exec-stream/win/exec-stream-impl.cpp, include/uoptions.h,
	  license.icu.txt, make-naive.sh, manual/bibliography.xml,
	  manual/binarygrammar.xml, manual/cgglossary.xml,
	  manual/cgkeywords.xml, manual/chapterize.sh,
	  manual/cmdreference.xml, manual/combine.sh,
	  manual/compatibility.xml, manual/contexts.xml,
	  manual/contributing.xml, manual/dependencies.xml,
	  manual/drafts.xml, manual/externals.xml, manual/faq.xml,
	  manual/generate.sh, manual/grammar.xml, manual/installation.xml,
	  manual/intro.xml, manual/make-dist.sh, manual/manual.xml,
	  manual/parentheses.xml, manual/pdf.sh, manual/probabilistic.xml,
	  manual/relations.xml, manual/rules.xml, manual/sets.xml,
	  manual/singlefile.sh, manual/streamcmds.xml,
	  manual/streamformats.xml, manual/subreadings.xml,
	  manual/tags.xml, manual/templates.xml, manual/validate.sh,